--- a/UserControls/HighScore_Popup.xaml
+++ b/UserControls/HighScore_Popup.xaml
@@ -24,6 +24,7 @@
                         <TextBlock Text="Name:" Foreground="Black" Margin="0,0,80,0" FontWeight="Medium" FontSize="30"/>
                         <TextBlock Text="Moves:" Foreground="Black" FontWeight="Medium" FontSize="30"/>
                     </StackPanel>
+                    <!-- Later add from json file, highscores -->
                     <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top">
                         <TextBlock Text="Test" Foreground="Black" Margin="0,0,80,0" FontSize="25"/>
                         <TextBlock Text="100" Foreground="Black" FontSize="25"/>
