--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:FiaMedKnuff"
+    xmlns:userControls="using:FiaMedKnuff.UserControls"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid Background="#4F2A00">
@@ -36,32 +37,57 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-
+                
                 <!-- Red player start zone -->
                 <Ellipse Grid.Row="0" Grid.Column="0" Width="50" Height="50" Fill="Red"/>
                 <Ellipse Grid.Row="0" Grid.Column="1" Width="50" Height="50" Fill="Red"/>
                 <Ellipse Grid.Row="1" Grid.Column="0" Width="50" Height="50" Fill="Red"/>
                 <Ellipse Grid.Row="1" Grid.Column="1" Width="50" Height="50" Fill="Red"/>
+                <!-- Dice for red -->
+                <Button Click="RollDice_Click" Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="2" Grid.RowSpan="2" Background="Transparent" Width="Auto" Height="Auto" CornerRadius="10">
+                    <Grid>
+                        <userControls:Dice x:Name="MyDice"></userControls:Dice>
+                    </Grid>
+                </Button>
 
                 <!-- Blue player start zone -->
                 <Ellipse Grid.Row="0" Grid.Column="9" Width="50" Height="50" Fill="Blue"/>
                 <Ellipse Grid.Row="0" Grid.Column="10" Width="50" Height="50" Fill="Blue"/>
                 <Ellipse Grid.Row="1" Grid.Column="9" Width="50" Height="50" Fill="Blue"/>
                 <Ellipse Grid.Row="1" Grid.Column="10" Width="50" Height="50" Fill="Blue"/>
+                <!-- dice for Blue-->
+                <Button Grid.Row="2" Grid.Column="7" Grid.ColumnSpan="2" Grid.RowSpan="2" Background="Transparent" Width="Auto" Height="Auto" CornerRadius="10">
+                    <Grid >
+                        <userControls:Dice></userControls:Dice>
+                    </Grid>
+                </Button>
 
                 <!-- Green player start zone -->
                 <Ellipse Grid.Row="9" Grid.Column="0" Width="50" Height="50" Fill="Yellow"/>
                 <Ellipse Grid.Row="10" Grid.Column="0" Width="50" Height="50" Fill="Yellow"/>
                 <Ellipse Grid.Row="9" Grid.Column="1" Width="50" Height="50" Fill="Yellow"/>
                 <Ellipse Grid.Row="10" Grid.Column="1" Width="50" Height="50" Fill="Yellow"/>
+                <!-- dice for Green-->
+                <Button Grid.Row="7" Grid.Column="7" Grid.ColumnSpan="2" Grid.RowSpan="2" Background="Transparent" Width="Auto" Height="Auto" CornerRadius="10">
+                    <Grid >
+                        <userControls:Dice></userControls:Dice>
+                    </Grid>
+                </Button>
 
                 <!-- Yellow player start zone -->
                 <Ellipse Grid.Row="9" Grid.Column="9" Width="50" Height="50" Fill="Green"/>
                 <Ellipse Grid.Row="9" Grid.Column="10" Width="50" Height="50" Fill="Green"/>
                 <Ellipse Grid.Row="10" Grid.Column="9" Width="50" Height="50" Fill="Green"/>
                 <Ellipse Grid.Row="10" Grid.Column="10" Width="50" Height="50" Fill="Green"/>
-                
-                
+                <!-- dice for Yellow-->
+                <Button Grid.Row="7" Grid.Column="2" Grid.ColumnSpan="2" Grid.RowSpan="2" Background="Transparent" Width="Auto" Height="Auto" CornerRadius="10">
+                    <Grid >
+                        <userControls:Dice></userControls:Dice>
+                    </Grid>
+                </Button>
+
+
+
                 <!--Lines connecting board circles-->
                 <Line Grid.Row="4" Grid.Column="0" X1="27.27" X2="245.4327" Stroke="Black" StrokeThickness="2" Grid.ColumnSpan="5" VerticalAlignment="Center"></Line>
                 <Line Grid.Row="0" Grid.Column="4" Y1="27.27" Y2="245.4327" Stroke="Black" StrokeThickness="2" Grid.RowSpan="5" HorizontalAlignment="Center"></Line>
@@ -168,13 +194,6 @@
                 <Ellipse x:Name="Player4Token" Width="35" Height="35" Fill="Yellow" Grid.Row="9" Grid.Column="0" Stroke="Black" StrokeThickness="3"/>
             </Grid>
         </Grid>
-
-        <!-- Dice Roll Button and Result -->
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,10,0,0">
-            <Button Content="Roll Dice" Click="RollDice_Click" Width="200" Height="50" Background="#840000" BorderBrush="Black" BorderThickness="2"/>
-            <TextBlock x:Name="DiceRollResult" FontSize="24" HorizontalAlignment="Center"/>
-        </StackPanel>
-
 
         <!-- Main Menu Button -->
         <StackPanel HorizontalAlignment="Right" VerticalAlignment="Top" Margin="50">
