--- a/UserControls/dice.xaml
+++ b/UserControls/dice.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="FiaMedKnuff.UserControls.dice"
+    x:Class="FiaMedKnuff.UserControls.Dice"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:FiaMedKnuff.UserControls"
@@ -21,29 +21,29 @@
                 <ColumnDefinition Width="20"/>
             </Grid.ColumnDefinitions >
             <Grid Grid.ColumnSpan="3" Grid.RowSpan="3" Background="White"/>
-            <!--top row -->
+            <!--top row dice dots-->
             <Grid Grid.Row="0" Grid.Column="0">
-                <Ellipse Width="10" Height="10" Fill="Black"/>
+                <Ellipse x:Name="dotOne" Width="15" Height="15" Fill="Black"/>
             </Grid>
             <Grid Grid.Row="0" Grid.Column="2">
-                <Ellipse Width="10" Height="10" Fill="Black"/>
+                <Ellipse x:Name="dotTwo" Width="15" Height="15" Fill="Black"/>
             </Grid>
-            <!-- 2nd row -->
+            <!-- 2nd row dice dots-->
             <Grid Grid.Row="1" Grid.Column="0">
-                <Ellipse Width="10" Height="10" Fill="Black"/>
+                <Ellipse x:Name="dotThree" Width="15" Height="15" Fill="Black"/>
             </Grid>
             <Grid Grid.Row="1" Grid.Column="1">
-                <Ellipse Width="10" Height="10" Fill="Black"/>
+                <Ellipse x:Name="dotFour" Width="15" Height="15" Fill="Black"/>
             </Grid>
             <Grid Grid.Row="1" Grid.Column="2">
-                <Ellipse Width="10" Height="10" Fill="Black"/>
+                <Ellipse x:Name="dotFive" Width="15" Height="15" Fill="Black"/>
             </Grid>
-            <!-- 3rd row -->
+            <!-- 3rd row dice dots -->
             <Grid Grid.Row="2" Grid.Column="0">
-                <Ellipse Width="10" Height="10" Fill="Black"/>
+                <Ellipse x:Name="dotSix" Width="15" Height="15" Fill="Black"/>
             </Grid>
             <Grid Grid.Row="2" Grid.Column="2">
-                <Ellipse Width="10" Height="10" Fill="Black"/>
+                <Ellipse x:Name="dotSeven" Width="15" Height="15" Fill="Black"/>
             </Grid>
         </Grid>
     </Grid>
