--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -196,13 +196,36 @@
                     <Rectangle Width="22" Height="25" Fill="#470000" Stroke="Black" StrokeThickness="3" RadiusX="3" RadiusY="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                     <Ellipse Width="20" Height="20" Fill="Red" Stroke="Black" StrokeThickness="3" VerticalAlignment="Top" HorizontalAlignment="Center"/>
                 </Grid>
+                <Grid x:Name="Player1Token2" Grid.Row="0" Grid.Column="1">
+                    <Rectangle Width="22" Height="25" Fill="#470000" Stroke="Black" StrokeThickness="3" RadiusX="3" RadiusY="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                    <Ellipse Width="20" Height="20" Fill="Red" Stroke="Black" StrokeThickness="3" VerticalAlignment="Top" HorizontalAlignment="Center"/>
+                </Grid>
+                <Grid x:Name="Player1Token3" Grid.Row="1" Grid.Column="0">
+                    <Rectangle Width="22" Height="25" Fill="#470000" Stroke="Black" StrokeThickness="3" RadiusX="3" RadiusY="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                    <Ellipse Width="20" Height="20" Fill="Red" Stroke="Black" StrokeThickness="3" VerticalAlignment="Top" HorizontalAlignment="Center"/>
+                </Grid>
+                <Grid x:Name="Player1Token4" Grid.Row="1" Grid.Column="1">
+                    <Rectangle Width="22" Height="25" Fill="#470000" Stroke="Black" StrokeThickness="3" RadiusX="3" RadiusY="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                    <Ellipse Width="20" Height="20" Fill="Red" Stroke="Black" StrokeThickness="3" VerticalAlignment="Top" HorizontalAlignment="Center"/>
+                </Grid>
 
 
-                
-                
+
                 <!-- Blue player token -->
                 <!--<Ellipse x:Name="Player2Token" Width="35" Height="35" Fill="Blue" Grid.Row="0" Grid.Column="9" Stroke="Black" StrokeThickness="3"/>-->
                 <Grid x:Name="Player2Token" Grid.Row="0" Grid.Column="9">
+                    <Rectangle Width="22" Height="25" Fill="#002147" Stroke="Black" StrokeThickness="3" RadiusX="3" RadiusY="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                    <Ellipse Width="20" Height="20" Fill="Blue" Stroke="Black" StrokeThickness="3" VerticalAlignment="Top" HorizontalAlignment="Center"/>
+                </Grid>
+                <Grid x:Name="Player2Token2" Grid.Row="0" Grid.Column="10">
+                    <Rectangle Width="22" Height="25" Fill="#002147" Stroke="Black" StrokeThickness="3" RadiusX="3" RadiusY="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                    <Ellipse Width="20" Height="20" Fill="Blue" Stroke="Black" StrokeThickness="3" VerticalAlignment="Top" HorizontalAlignment="Center"/>
+                </Grid>
+                <Grid x:Name="Player2Token3" Grid.Row="1" Grid.Column="9">
+                    <Rectangle Width="22" Height="25" Fill="#002147" Stroke="Black" StrokeThickness="3" RadiusX="3" RadiusY="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                    <Ellipse Width="20" Height="20" Fill="Blue" Stroke="Black" StrokeThickness="3" VerticalAlignment="Top" HorizontalAlignment="Center"/>
+                </Grid>
+                <Grid x:Name="Player2Token4" Grid.Row="1" Grid.Column="10">
                     <Rectangle Width="22" Height="25" Fill="#002147" Stroke="Black" StrokeThickness="3" RadiusX="3" RadiusY="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                     <Ellipse Width="20" Height="20" Fill="Blue" Stroke="Black" StrokeThickness="3" VerticalAlignment="Top" HorizontalAlignment="Center"/>
                 </Grid>
@@ -216,18 +239,47 @@
                     <Rectangle Width="22" Height="25" Fill="#004702" Stroke="Black" StrokeThickness="3" RadiusX="3" RadiusY="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                     <Ellipse Width="20" Height="20" Fill="Green" Stroke="Black" StrokeThickness="3" VerticalAlignment="Top" HorizontalAlignment="Center"/>
                 </Grid>
-                
-                
-                
-                
+                <Grid x:Name="Player3Token2" Grid.Row="9" Grid.Column="10">
+                    <Rectangle Width="22" Height="25" Fill="#004702" Stroke="Black" StrokeThickness="3" RadiusX="3" RadiusY="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                    <Ellipse Width="20" Height="20" Fill="Green" Stroke="Black" StrokeThickness="3" VerticalAlignment="Top" HorizontalAlignment="Center"/>
+                </Grid>
+                <Grid x:Name="Player3Token3" Grid.Row="10" Grid.Column="9">
+                    <Rectangle Width="22" Height="25" Fill="#004702" Stroke="Black" StrokeThickness="3" RadiusX="3" RadiusY="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                    <Ellipse Width="20" Height="20" Fill="Green" Stroke="Black" StrokeThickness="3" VerticalAlignment="Top" HorizontalAlignment="Center"/>
+                </Grid>
+                <Grid x:Name="Player3Token4" Grid.Row="10" Grid.Column="10">
+                    <Rectangle Width="22" Height="25" Fill="#004702" Stroke="Black" StrokeThickness="3" RadiusX="3" RadiusY="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                    <Ellipse Width="20" Height="20" Fill="Green" Stroke="Black" StrokeThickness="3" VerticalAlignment="Top" HorizontalAlignment="Center"/>
+                </Grid>
+
+
+
                 <!-- Yellow player token -->
                 <!--<Ellipse x:Name="Player4Token" Width="35" Height="35" Fill="Yellow" Grid.Row="9" Grid.Column="0" Stroke="Black" StrokeThickness="3"/>-->
                 <Grid x:Name="Player4Token" Grid.Row="9" Grid.Column="0">
                     <Rectangle Width="22" Height="25" Fill="#473C00" Stroke="Black" StrokeThickness="3" RadiusX="3" RadiusY="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                     <Ellipse Width="20" Height="20" Fill="Yellow" Stroke="Black" StrokeThickness="3" VerticalAlignment="Top" HorizontalAlignment="Center"/>
                 </Grid>
+                <Grid x:Name="Player4Token2" Grid.Row="9" Grid.Column="1">
+                    <Rectangle Width="22" Height="25" Fill="#473C00" Stroke="Black" StrokeThickness="3" RadiusX="3" RadiusY="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                    <Ellipse Width="20" Height="20" Fill="Yellow" Stroke="Black" StrokeThickness="3" VerticalAlignment="Top" HorizontalAlignment="Center"/>
+                </Grid>
+                <Grid x:Name="Player4Token3" Grid.Row="10" Grid.Column="0">
+                    <Rectangle Width="22" Height="25" Fill="#473C00" Stroke="Black" StrokeThickness="3" RadiusX="3" RadiusY="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                    <Ellipse Width="20" Height="20" Fill="Yellow" Stroke="Black" StrokeThickness="3" VerticalAlignment="Top" HorizontalAlignment="Center"/>
+                </Grid>
+                <Grid x:Name="Player4Token4" Grid.Row="10" Grid.Column="1">
+                    <Rectangle Width="22" Height="25" Fill="#473C00" Stroke="Black" StrokeThickness="3" RadiusX="3" RadiusY="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                    <Ellipse Width="20" Height="20" Fill="Yellow" Stroke="Black" StrokeThickness="3" VerticalAlignment="Top" HorizontalAlignment="Center"/>
+                </Grid>
+
             </Grid>
         </Grid>
+        <ContentDialog x:Name="ChoiceDialog"
+               Title="Move Choice"
+               PrimaryButtonText="Move out of Nest"
+               SecondaryButtonText="Move 6 Steps"
+               CloseButtonText="Cancel" Visibility="Collapsed" />
 
         <!-- Temp: Result text -->
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,10,0,0">
