--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -192,19 +192,19 @@
                 
                 <!-- Red player token -->
                 <!--<Ellipse x:Name="Player1Token" Width="35" Height="35" Fill="Red" Grid.Row="0" Grid.Column="0" Stroke="Black" StrokeThickness="3"/>-->
-                <Grid x:Name="Player1Token" Grid.Row="0" Grid.Column="0">
+                <Grid x:Name="Player1Token" Grid.Row="0" Grid.Column="0" Tapped="Chosen_Token">
                     <Rectangle Width="22" Height="25" Fill="#470000" Stroke="Black" StrokeThickness="3" RadiusX="3" RadiusY="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                     <Ellipse Width="20" Height="20" Fill="Red" Stroke="Black" StrokeThickness="3" VerticalAlignment="Top" HorizontalAlignment="Center"/>
                 </Grid>
-                <Grid x:Name="Player1Token2" Grid.Row="0" Grid.Column="1">
+                <Grid x:Name="Player1Token2" Grid.Row="0" Grid.Column="1" Tapped="Chosen_Token">
                     <Rectangle Width="22" Height="25" Fill="#470000" Stroke="Black" StrokeThickness="3" RadiusX="3" RadiusY="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                     <Ellipse Width="20" Height="20" Fill="Red" Stroke="Black" StrokeThickness="3" VerticalAlignment="Top" HorizontalAlignment="Center"/>
                 </Grid>
-                <Grid x:Name="Player1Token3" Grid.Row="1" Grid.Column="0">
+                <Grid x:Name="Player1Token3" Grid.Row="1" Grid.Column="0" Tapped="Chosen_Token">
                     <Rectangle Width="22" Height="25" Fill="#470000" Stroke="Black" StrokeThickness="3" RadiusX="3" RadiusY="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                     <Ellipse Width="20" Height="20" Fill="Red" Stroke="Black" StrokeThickness="3" VerticalAlignment="Top" HorizontalAlignment="Center"/>
                 </Grid>
-                <Grid x:Name="Player1Token4" Grid.Row="1" Grid.Column="1">
+                <Grid x:Name="Player1Token4" Grid.Row="1" Grid.Column="1" Tapped="Chosen_Token">
                     <Rectangle Width="22" Height="25" Fill="#470000" Stroke="Black" StrokeThickness="3" RadiusX="3" RadiusY="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                     <Ellipse Width="20" Height="20" Fill="Red" Stroke="Black" StrokeThickness="3" VerticalAlignment="Top" HorizontalAlignment="Center"/>
                 </Grid>
@@ -213,19 +213,19 @@
 
                 <!-- Blue player token -->
                 <!--<Ellipse x:Name="Player2Token" Width="35" Height="35" Fill="Blue" Grid.Row="0" Grid.Column="9" Stroke="Black" StrokeThickness="3"/>-->
-                <Grid x:Name="Player2Token" Grid.Row="0" Grid.Column="9">
+                <Grid x:Name="Player2Token" Grid.Row="0" Grid.Column="9" Tapped="Chosen_Token">
                     <Rectangle Width="22" Height="25" Fill="#002147" Stroke="Black" StrokeThickness="3" RadiusX="3" RadiusY="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                     <Ellipse Width="20" Height="20" Fill="Blue" Stroke="Black" StrokeThickness="3" VerticalAlignment="Top" HorizontalAlignment="Center"/>
                 </Grid>
-                <Grid x:Name="Player2Token2" Grid.Row="0" Grid.Column="10">
+                <Grid x:Name="Player2Token2" Grid.Row="0" Grid.Column="10" Tapped="Chosen_Token">
                     <Rectangle Width="22" Height="25" Fill="#002147" Stroke="Black" StrokeThickness="3" RadiusX="3" RadiusY="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                     <Ellipse Width="20" Height="20" Fill="Blue" Stroke="Black" StrokeThickness="3" VerticalAlignment="Top" HorizontalAlignment="Center"/>
                 </Grid>
-                <Grid x:Name="Player2Token3" Grid.Row="1" Grid.Column="9">
+                <Grid x:Name="Player2Token3" Grid.Row="1" Grid.Column="9" Tapped="Chosen_Token">
                     <Rectangle Width="22" Height="25" Fill="#002147" Stroke="Black" StrokeThickness="3" RadiusX="3" RadiusY="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                     <Ellipse Width="20" Height="20" Fill="Blue" Stroke="Black" StrokeThickness="3" VerticalAlignment="Top" HorizontalAlignment="Center"/>
                 </Grid>
-                <Grid x:Name="Player2Token4" Grid.Row="1" Grid.Column="10">
+                <Grid x:Name="Player2Token4" Grid.Row="1" Grid.Column="10" Tapped="Chosen_Token">
                     <Rectangle Width="22" Height="25" Fill="#002147" Stroke="Black" StrokeThickness="3" RadiusX="3" RadiusY="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                     <Ellipse Width="20" Height="20" Fill="Blue" Stroke="Black" StrokeThickness="3" VerticalAlignment="Top" HorizontalAlignment="Center"/>
                 </Grid>
@@ -235,19 +235,19 @@
 
                 <!-- Green player token -->
                 <!--<Ellipse x:Name="Player3Token" Width="35" Height="35" Fill="Green" Grid.Row="9" Grid.Column="9" Stroke="Black" StrokeThickness="3"/>-->
-                <Grid x:Name="Player3Token" Grid.Row="9" Grid.Column="9">
+                <Grid x:Name="Player3Token" Grid.Row="9" Grid.Column="9" Tapped="Chosen_Token">
                     <Rectangle Width="22" Height="25" Fill="#004702" Stroke="Black" StrokeThickness="3" RadiusX="3" RadiusY="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                     <Ellipse Width="20" Height="20" Fill="Green" Stroke="Black" StrokeThickness="3" VerticalAlignment="Top" HorizontalAlignment="Center"/>
                 </Grid>
-                <Grid x:Name="Player3Token2" Grid.Row="9" Grid.Column="10">
+                <Grid x:Name="Player3Token2" Grid.Row="9" Grid.Column="10" Tapped="Chosen_Token">
                     <Rectangle Width="22" Height="25" Fill="#004702" Stroke="Black" StrokeThickness="3" RadiusX="3" RadiusY="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                     <Ellipse Width="20" Height="20" Fill="Green" Stroke="Black" StrokeThickness="3" VerticalAlignment="Top" HorizontalAlignment="Center"/>
                 </Grid>
-                <Grid x:Name="Player3Token3" Grid.Row="10" Grid.Column="9">
+                <Grid x:Name="Player3Token3" Grid.Row="10" Grid.Column="9" Tapped="Chosen_Token">
                     <Rectangle Width="22" Height="25" Fill="#004702" Stroke="Black" StrokeThickness="3" RadiusX="3" RadiusY="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                     <Ellipse Width="20" Height="20" Fill="Green" Stroke="Black" StrokeThickness="3" VerticalAlignment="Top" HorizontalAlignment="Center"/>
                 </Grid>
-                <Grid x:Name="Player3Token4" Grid.Row="10" Grid.Column="10">
+                <Grid x:Name="Player3Token4" Grid.Row="10" Grid.Column="10" Tapped="Chosen_Token">
                     <Rectangle Width="22" Height="25" Fill="#004702" Stroke="Black" StrokeThickness="3" RadiusX="3" RadiusY="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                     <Ellipse Width="20" Height="20" Fill="Green" Stroke="Black" StrokeThickness="3" VerticalAlignment="Top" HorizontalAlignment="Center"/>
                 </Grid>
@@ -256,19 +256,19 @@
 
                 <!-- Yellow player token -->
                 <!--<Ellipse x:Name="Player4Token" Width="35" Height="35" Fill="Yellow" Grid.Row="9" Grid.Column="0" Stroke="Black" StrokeThickness="3"/>-->
-                <Grid x:Name="Player4Token" Grid.Row="9" Grid.Column="0">
+                <Grid x:Name="Player4Token" Grid.Row="9" Grid.Column="0" Tapped="Chosen_Token">
                     <Rectangle Width="22" Height="25" Fill="#473C00" Stroke="Black" StrokeThickness="3" RadiusX="3" RadiusY="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                     <Ellipse Width="20" Height="20" Fill="Yellow" Stroke="Black" StrokeThickness="3" VerticalAlignment="Top" HorizontalAlignment="Center"/>
                 </Grid>
-                <Grid x:Name="Player4Token2" Grid.Row="9" Grid.Column="1">
+                <Grid x:Name="Player4Token2" Grid.Row="9" Grid.Column="1" Tapped="Chosen_Token">
                     <Rectangle Width="22" Height="25" Fill="#473C00" Stroke="Black" StrokeThickness="3" RadiusX="3" RadiusY="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                     <Ellipse Width="20" Height="20" Fill="Yellow" Stroke="Black" StrokeThickness="3" VerticalAlignment="Top" HorizontalAlignment="Center"/>
                 </Grid>
-                <Grid x:Name="Player4Token3" Grid.Row="10" Grid.Column="0">
+                <Grid x:Name="Player4Token3" Grid.Row="10" Grid.Column="0" Tapped="Chosen_Token">
                     <Rectangle Width="22" Height="25" Fill="#473C00" Stroke="Black" StrokeThickness="3" RadiusX="3" RadiusY="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                     <Ellipse Width="20" Height="20" Fill="Yellow" Stroke="Black" StrokeThickness="3" VerticalAlignment="Top" HorizontalAlignment="Center"/>
                 </Grid>
-                <Grid x:Name="Player4Token4" Grid.Row="10" Grid.Column="1">
+                <Grid x:Name="Player4Token4" Grid.Row="10" Grid.Column="1" Tapped="Chosen_Token">
                     <Rectangle Width="22" Height="25" Fill="#473C00" Stroke="Black" StrokeThickness="3" RadiusX="3" RadiusY="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                     <Ellipse Width="20" Height="20" Fill="Yellow" Stroke="Black" StrokeThickness="3" VerticalAlignment="Top" HorizontalAlignment="Center"/>
                 </Grid>
